[gd_scene load_steps=12 format=2]

[ext_resource path="res://Car.gd" type="Script" id=1]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0.368627, 1, 1 )
roughness = 0.5

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )
size = Vector3( 1.8, 1.4, 4.6 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.9, 0.7, 2.3 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=6]
material = SubResource( 5 )
size = Vector3( 1.8, 0.35, 4.6 )

[sub_resource type="SpatialMaterial" id=7]
flags_unshaded = true
albedo_color = Color( 0, 1, 0, 1 )

[sub_resource type="SphereMesh" id=8]
material = SubResource( 7 )
radius = 0.1
height = 0.2

[sub_resource type="SpatialMaterial" id=9]
flags_unshaded = true
albedo_color = Color( 0, 0, 1, 1 )

[sub_resource type="SphereMesh" id=10]
material = SubResource( 9 )
radius = 0.1
height = 0.2

[node name="Car" type="RigidBody"]
mass = 1500.0
physics_material_override = SubResource( 1 )
angular_damp = 1.0
script = ExtResource( 1 )

[node name="model" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05, 0 )
shape = SubResource( 4 )

[node name="Suspension" type="Spatial" parent="."]

[node name="Spring1" type="RayCast" parent="Suspension"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.6, -1.5 )
enabled = true
cast_to = Vector3( 0, -0.6, 0 )

[node name="Spring2" type="RayCast" parent="Suspension"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.6, 1.5 )
enabled = true
cast_to = Vector3( 0, -0.6, 0 )

[node name="Spring3" type="RayCast" parent="Suspension"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0.6, -1.5 )
enabled = true
cast_to = Vector3( 0, -0.6, 0 )

[node name="Spring4" type="RayCast" parent="Suspension"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0.6, 1.5 )
enabled = true
cast_to = Vector3( 0, -0.6, 0 )

[node name="suspension" type="MeshInstance" parent="Suspension"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.175, 0 )
visible = false
mesh = SubResource( 6 )
material/0 = null

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 5 )
current = true
fov = 90.0

[node name="Camera2" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2 )
fov = 90.0

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeshInstance1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -4 )
mesh = SubResource( 8 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -4 )
mesh = SubResource( 8 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -8 )
mesh = SubResource( 10 )
material/0 = null

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -8 )
mesh = SubResource( 10 )
material/0 = null

[node name="Area" type="Area" parent="."]
